# cat

./: Cargo.toml  cat  dude.txt
src/: cat.rs  error.rs  exit_codes.rs  main.rs  opt.rs  state.rs
tests/: cli.rs
