[package]
name = "cat"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
anyhow = "1.0.32"
unicode-segmentation = "1.6.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
